[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/PlayerUI/HTPMenu/HTPMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/CompassPro.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=13]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=25]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[node name="HTPMenu" type="Label"]
visible = false
margin_left = 272.0
margin_top = 80.0
margin_right = 368.0
margin_bottom = 110.0
grow_horizontal = 2
custom_fonts/font = SubResource( 13 )
text = "How To Play"
align = 1
valign = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -112.0
margin_right = 208.0
margin_bottom = 200.0
grow_horizontal = 2
mouse_filter = 2
color = Color( 0, 0, 0, 0.419608 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMenu" type="VBoxContainer" parent="."]
margin_left = -18.0
margin_top = 39.0
margin_right = 114.0
margin_bottom = 104.0
grow_horizontal = 2
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="ButtonMenu"]
margin_right = 282.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 25 )
text = "W/A/S/D - Movement
Space - Dash
Left Click - Attack
Right Click - Interact/Pick up items
Mouse Scroll/Number Keys - Switch weapons
Q - Drop weapon
Esc - Pause"

[node name="BackBtn" type="Button" parent="ButtonMenu"]
margin_top = 133.0
margin_right = 282.0
margin_bottom = 148.0
custom_colors/font_color_focus = Color( 1, 0.815686, 0.168627, 1 )
custom_colors/font_color_hover = Color( 1, 0.815686, 0.168627, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_HTPMenu_visibility_changed"]
[connection signal="focus_entered" from="ButtonMenu/BackBtn" to="." method="_on_BackBtn_focus_entered"]
[connection signal="mouse_entered" from="ButtonMenu/BackBtn" to="." method="_on_BackBtn_mouse_entered"]
[connection signal="pressed" from="ButtonMenu/BackBtn" to="." method="_on_BackBtn_pressed"]
